// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddUser component should render with button disabled 1`] = `
<div>
  <input
    id="name"
    onChange={[Function]}
    type="text"
    value=""
  />
  <label
    htmlFor="name"
  >
    Name
  </label>
  <input
    id="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <label
    htmlFor="email"
  >
    Email
  </label>
  <input
    checked={false}
    id="isDoctor"
    onChange={[Function]}
    type="checkbox"
    value="isDoctor"
  />
  <label
    htmlFor="isDoctor"
  >
    Doctor
  </label>
  <input
    checked={false}
    id="isSpecialist"
    onChange={[Function]}
    type="checkbox"
    value="isSpecialist"
  />
  <label
    htmlFor="isSpecialist"
  >
    Specialist
  </label>
  <Button
    disabled={true}
    onClick={[Function]}
  >
    Add User
  </Button>
</div>
`;

exports[`AddUser component should render with button enabled 1`] = `
<div>
  <input
    id="name"
    onChange={[Function]}
    type="text"
    value="Marty McFly"
  />
  <label
    htmlFor="name"
  >
    Name
  </label>
  <input
    id="email"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="marty@mcfly.com"
  />
  <label
    htmlFor="email"
  >
    Email
  </label>
  <input
    checked={false}
    id="isDoctor"
    onChange={[Function]}
    type="checkbox"
    value="isDoctor"
  />
  <label
    htmlFor="isDoctor"
  >
    Doctor
  </label>
  <input
    checked={false}
    id="isSpecialist"
    onChange={[Function]}
    type="checkbox"
    value="isSpecialist"
  />
  <label
    htmlFor="isSpecialist"
  >
    Specialist
  </label>
  <Button
    disabled={false}
    onClick={[Function]}
  >
    Add User
  </Button>
</div>
`;
